Rename email to name in user data
