# lib/httpServer/projection.js
@@ -15,7 +15,7 @@ const service = service => {
         createdAt: service.CreatedAt,
         name: service.Spec.Name,
         image: service.Spec.TaskTemplate.ContainerSpec.Image,
-        email: service.Spec.Labels.email,
+        username: service.Spec.Labels.name,
         ports: (service.Endpoint && service.Endpoint.Ports ? service.Endpoint.Ports.map(port) : null),
         tasks: service.Tasks.map(task)
     };
@@ -66,7 +66,7 @@ const tokenResult = token => {
 
 const user = user => {
     return {
-        email: user.email,
+        name: user.name,
         type: user.type
     };
 };
